# alfred

./: .gitignore  Architecture.md  Core.md  Desinlanuage.md  Info.md  RUN.md  core-extra.md  deploy-daemon.sh  deploy-vps.sh  docker-compose.yml  more_test.md  nginx_vps.conf  opex-guide.html  pakaging.md  peoplemodule.md  pricing_model.md  start.bat  start.ps1  testing.md
.agents/skills/ponytail/: SKILL.md
.agents/skills/spec-kit/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
alfred-economic-engine/: Cargo.toml  Dockerfile
alfred-economic-engine/crates/ai-decision-engine/: Cargo.toml
alfred-economic-engine/crates/ai-decision-engine/src/: lib.rs
alfred-economic-engine/crates/billing-engine/: Cargo.toml
alfred-economic-engine/crates/billing-engine/src/: lib.rs
alfred-economic-engine/crates/cost-engine/: Cargo.toml
alfred-economic-engine/crates/cost-engine/src/: lib.rs
alfred-economic-engine/crates/digital-twin-adapter/: Cargo.toml
alfred-economic-engine/crates/digital-twin-adapter/src/: lib.rs
alfred-economic-engine/crates/economic-core/: Cargo.toml
alfred-economic-engine/crates/economic-core/src/: lib.rs
alfred-economic-engine/crates/enterprise-api/: Cargo.toml
alfred-economic-engine/crates/enterprise-api/src/: lib.rs  main.rs
alfred-economic-engine/crates/marketplace-engine/: Cargo.toml
alfred-economic-engine/crates/marketplace-engine/src/: lib.rs
alfred-economic-engine/crates/policy-engine/: Cargo.toml
alfred-economic-engine/crates/policy-engine/src/: lib.rs
alfred-economic-engine/crates/pricing-engine/: Cargo.toml
alfred-economic-engine/crates/pricing-engine/src/: lib.rs
alfred-economic-engine/crates/recommendation-engine/: Cargo.toml
alfred-economic-engine/crates/recommendation-engine/src/: lib.rs
alfred-economic-engine/crates/revenue-engine/: Cargo.toml
alfred-economic-engine/crates/revenue-engine/src/: lib.rs
alfred-economic-engine/crates/risk-engine/: Cargo.toml
alfred-economic-engine/crates/risk-engine/src/: lib.rs
alfred-economic-engine/crates/roi-engine/: Cargo.toml
alfred-economic-engine/crates/roi-engine/src/: lib.rs
alfred-economic-engine/crates/signal-processor/: Cargo.toml
alfred-economic-engine/crates/signal-processor/src/: lib.rs
alfred-economic-engine/crates/simulation-engine/: Cargo.toml
alfred-economic-engine/crates/simulation-engine/src/: lib.rs
alfred-economic-engine/crates/trust-engine/: Cargo.toml
alfred-economic-engine/crates/trust-engine/src/: lib.rs
backend/: Cargo.toml  Dockerfile  generate_onnx.py
backend/.cargo/: config.toml
backend/crates/ai-gateway/: Cargo.toml
backend/crates/ai-gateway/src/: lib.rs
backend/crates/alert-engine/: Cargo.toml
backend/crates/alert-engine/src/: lib.rs
backend/crates/api-gateway/: Cargo.toml
backend/crates/api-gateway/src/: main.rs
backend/crates/api-gateway/src/routes/: agents.rs  analytics.rs  auth.rs  decisions.rs  developer.rs  governance.rs  incidents.rs  knowledge.rs  marketplace.rs  mod.rs  monitoring.rs  onboarding.rs  ontology.rs  people.rs  validation.rs  workflows.rs
backend/crates/api-gateway/tests/: integration_tests.rs
backend/crates/automation-engine/: Cargo.toml
backend/crates/automation-engine/src/: lib.rs
backend/crates/config-engine/: Cargo.toml
backend/crates/config-engine/src/: lib.rs
backend/crates/connector-sdk/: Cargo.toml
backend/crates/connector-sdk/src/: lib.rs
backend/crates/crc-engine/: Cargo.toml
backend/crates/crc-engine/src/: lib.rs
backend/crates/decision-engine/: Cargo.toml
backend/crates/decision-engine/src/: ai.rs  ai_rca.rs  lib.rs  rules.rs
backend/crates/dns-engine/: Cargo.toml
backend/crates/dns-engine/src/: lib.rs
backend/crates/event-bus/: Cargo.toml
backend/crates/event-bus/src/: lib.rs
backend/crates/feedback-engine/: Cargo.toml
backend/crates/feedback-engine/src/: lib.rs
backend/crates/governance-engine/: Cargo.toml
backend/crates/governance-engine/src/: lib.rs
backend/crates/knowledge-engine/: Cargo.toml
backend/crates/knowledge-engine/src/: lib.rs  worker.rs
backend/crates/latency-engine/: Cargo.toml
backend/crates/latency-engine/src/: lib.rs
backend/crates/ml-engine/: Cargo.toml
backend/crates/ml-engine/src/: lib.rs
backend/crates/monitor-core/: Cargo.toml
backend/crates/monitor-core/src/: lib.rs  telemetry.rs
backend/crates/ontology-engine/: Cargo.toml
backend/crates/ontology-engine/src/: engine.rs  entities.rs  lib.rs  templates.rs
backend/crates/packet-engine/: Cargo.toml
backend/crates/packet-engine/src/: lib.rs
backend/crates/people-engine/: Cargo.toml
backend/crates/people-engine/src/: engine.rs  lib.rs  models.rs  sentiment.rs
backend/crates/registry-service/: Cargo.toml
backend/crates/registry-service/src/: lib.rs
backend/crates/simulation-engine/: Cargo.toml
backend/crates/simulation-engine/src/: lib.rs
backend/crates/storage-engine/: Cargo.toml
backend/crates/storage-engine/migrations/: 20240720000000_init.sql  20240720000001_audit_logs.sql  20240720000002_installed_packages.sql
backend/crates/storage-engine/src/: lib.rs
backend/crates/workflow-engine/: Cargo.toml
backend/crates/workflow-engine/src/: engine.rs  lib.rs  node.rs
backend/models/: failure_predictor.onnx
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/lib/: api.ts  pptGenerator.ts
frontend/src/routes/: __root.tsx  agents.tsx  analytics.tsx  automation.tsx  decisions.tsx  developer.tsx  governance.tsx  incidents.tsx  index.tsx  knowledge.tsx  marketplace.tsx  monitoring.tsx  onboarding.tsx  people.tsx  reports.tsx  (+3 more)
mcp_server/: package-lock.json  package.json
mcp_server/src/: index.ts
monitor-agent/: Dockerfile  index.js  package-lock.json  package.json
public_site/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public_site/public/: openapi.json  opex-guide.html
public_site/src/: App.tsx  index.css
sdk/python/: alfred.py  setup.py  test_sdk.py
(+20 files in other folders)
