[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros", "migrate"] }
neo4rs = "0.8"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
blake2 = "0.10"
sysinfo = "0.30"
redis = { version = "0.25", features = ["tokio-comp"] }
futures = { version = "0.3" }
ts-rs = { version = "8.1", features = ["serde-compat"] }

[profile.dev]
codegen-units = 1
