[package]
name = "dns-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
event-bus = { path = "../event-bus" }
storage-engine = { path = "../storage-engine" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
