[package]
name = "ontology-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
storage-engine = { path = "../storage-engine" }
event-bus = { path = "../event-bus" }
uuid = { workspace = true }
neo4rs.workspace = true
